# artwork-dl

./: .gitignore  README.md  setup.cfg
src/cli/: extractor.py  main.py  settings.py
src/ui/: app.py  layout.py  requirements.txt
src/ui/assets/: styles.css
src/ui/components/: info_table.py
