[metadata]
name = artwork_dl
version = 1.0.0
author = longthp
description = CLI tool for downloading music's artwork

[options]
packages = find:
install_requires =
    httpx
    beautifulsoup4

[options.packages.find]
where = src
exclude =
    testings*

[options.entry_points]
console_scripts =
    artwork-dl = cli.main:main
